style: prevent small shift on class change

--- a/client/src/features/info/Info.module.scss
+++ b/client/src/features/info/Info.module.scss
@@ -9,7 +9,6 @@
 
 .container {
   @include container;
-  border: 1px solid transparent;
 }
 
 
